test/spec_vectors/local_set/fail/module_6.wat
(module (func $type-param-arg-num-vs-num (param i32) (local.set 0 (f32.const 0))))